test/files/invalid/unknown_constants.stderr
[0m[1m[38;5;9merror[0m[1m: Unknown constant "hello"[0m
  [0m[34m┌─[0m test/files/invalid/unknown_constants.fbs:3:16
  [0m[34m│[0m
[0m[34m3[0m [0m[34m│[0m   y: float32 = [0m[31mhello[0m;
  [0m[34m│[0m                [0m[31m^^^^^[0m

Error: Bailing because of errors
